# Wasm

./: .gitignore  Cargo.toml  RE.md  README.md  SKILLS.md  TUTORIAL.md  build.rs  host.rs
guest1/: Cargo.toml
guest1/src/: bindings.rs  lib.rs
guest1/wit/: world.wit
guest2/: Cargo.toml
guest2/src/: bindings.rs  lib.rs
guest2/wit/: world.wit
tests/: integration.rs
